Comments now update again on change